--- a/about/index.html
+++ b/about/index.html
@@ -140,8 +140,8 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">01</h2>
 						<h2 class="big">By Design?</h2>
-						<p>Things pop out at me and they don’t shut up: a pixel out of place, a misspelled word, or mismatched shades of black. Code doesn’t run with missing keystrokes.</p>
-						<p>Laser-focused precision and a sensitivity to what feels natural allow me to deliver robust experiences that flow elegantly and fit the user’s needs, rather than the contrary.</p>
+						<p>Some may say I was born to work in design. My father was an artist, designer, and professor. I fondly remember spending time in his home studio with other designers whom he employed to run his small business in between lectures. I read books, we listened to music, and watched the guys click, type, and create.</p>
+						<p>In the morning before I went to afternoon kindergarten, I'd travel around with my dad visiting design clients and print shops, the journey being soundtracked by Johnny Cash.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -151,8 +151,8 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">02</h2>
 						<h2 class="big">Learning the Ropes</h2>
-						<p>Cross-disciplinary teams deliver stronger products because they contain diverse perspectives, but success depends on their ability to adapt.</p>
-						<p>When design spaces become ambiguous on these teams, I prioritize open-minded exploration and the willingness to create differently.</p>
+						<p>I later found my way to Purdue UX Design, a program that seemingly blended everything I wanted: psychology, visual design, and software development.</p>
+						<p>I was awestruck. This huge, new, impossibly complex and infininite world appeared in front of me--we could build whatever we set our minds to. My time in this rigorous curriculum taught me a user-centered approach to research, UI design, and product development.  Digital civics instilled in me the drive to empower folks in solving local problems via scrappy, digital solutions.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -162,8 +162,8 @@
 					<div class="fl-50 j-fl-st col-l t-l marg">
 						<h2 class="big grey-f">03</h2>
 						<h2 class="big">Practitioner</h2>
-						<p>Forty hours in an office per week is a long time. I’ve been told that places were dead before I got there. Frankly,  it's due to the simple fact that I can’t handle the quiet for too long. Of course--I also like to have fun.</p>
-						<p>With me in the room you’ll have no short supply of quick wit, dry humor, and cheeky banter.</p>
+						<p>Now in the field I'm motivated to continue learning different skills and techniques in full-stack web development contexts. I am motivated in solving real problems and empowering folks to address local issues with novel solutions. I take great joy in training others, and believe that development is an accessible tool that anyone can learn.</p>
+						<p>In the office I'll greet you with a smile. At some point I'll crack a joke... but, beyond the humor, I'll always be focused on my craft and be excited to explore new code ideas with my team.</p>
 					</div>
 				</div>
 			</div>
@@ -191,8 +191,8 @@
 					</div>
 					<div class="fl-50 j-c col-r marg t-l">
 						<h2>WordPress + Power Apps</h2>
-						<p>UX is the car and brand is the driver. I deliver branding guidelines that sustain your core essence and identify opportunities for your visual and written tone to evolve in changing technological channels.</p>
-						<p>Typography, colors, iconography, or UI elements: wherever your brand shows up, I'll ensure the touchpoints stay consistent and the tone is yours.</p>
+						<p>WordPress presents a powerful CMS. Users management content here, yet can simultaneously bind different Power Apps data with these objects.</p>
+						<p>Though JCMA, I deliver different products for several clients that take Dataverse data from Power Apps and serve it up via custom PHP endpoints on the front end. I create design systems and code the entire front-end experiences.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
@@ -201,8 +201,8 @@
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h2>Web Apps</h2>
-						<p>A product requires two things to be user-centric: constant, attentive engagement with the appropriate user group and a careful, driven approach to every stage of UX strategy.</p>
-						<p>From interviews, to usability testing, to ongoing optimization after launch--I champion impactful, data-driven campaigns to build foundational groundwork that facilitates first-class digital experience production.</p>
+						<p>I have developed a solid foundation in HTML, CSS, and JavaScript. I get excited over small UI details and interesting interactions. And I created one too many different iterations of a carousel.</p>
+						<p>I'm currently learning new ways to implement React.js, Node, and different use cases for REST APIs. More of these can be found on my GitHub. For example, a custom notebook application that uses locl storage.</p>
 					</div>
 				</div>
 			</div>
