--- a/about/index.html
+++ b/about/index.html
@@ -202,7 +202,7 @@
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h2>Web Apps</h2>
 						<p>I have developed a solid foundation in HTML, CSS, and JavaScript. I get excited over small UI details and interesting interactions. And I created one too many different iterations of a carousel.</p>
-						<p>I'm currently learning new ways to implement React.js, Node, and different use cases for REST APIs. More of these can be found on my GitHub. For example, a custom notebook application that uses locl storage.</p>
+						<p>I'm currently learning new ways to implement React.js, Node, and different use cases for REST APIs. More of these can be found on my GitHub. For example, a custom notebook application that uses local storage.</p>
 					</div>
 				</div>
 			</div>
