--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -122,14 +122,14 @@
 						<p>Serving as the pioneering user group, the Valparaiso Noon Kiwanis club of 300+ members were the first give Rita CMS life. Kiwanis engages in community outreach programs, fundraising, accessible platform construction, house rehab, and exciting things that give back. The club uses the app to share files, create events and meetings, manage membership, use internal messaging, and much more.</p>
 					</div>
 				</div>
-				<div class="flex-box al-c">
+				<div class="flex-box-rev al-c">
+					<div class="fl-50 col-r marg">
+						<img class="shad" src="../../media/retirees.png" alt="" width="100%">
+					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
 						<h2>Professionals, retirees, volunteers, and disable veterans.</h2>
 						<p>Most of the users of Rita CMS are older aged, like 55+ and some of the oldest in late 80s. With againg comes a different ocular and motor experience of technology. However, the age range is varied. There are also younger folks. Outside of Noon Kiwanis, the Disabled American Veterans Chapter 80 of Indiana also uses Rita CMS. These folsk as you can imagine have differences in user experience. These challenges present a unique design opportunity.</p>
-					</div>
-					<div class="fl-50 col-r marg">
-						<img class="shad" src="../../media/retirees.png" alt="" width="100%">
 					</div>
 				</div>
 				<div class="flex-box al-c">
@@ -152,7 +152,7 @@
 				<div class="flex-box">
 					<div class="marg">
 						<h5>USER REQUIREMENTS</h5>
-						<h2 class="big">Joe and engaged in interviews and brainstorming session with Kiwanis to define key needs that Rita CMS needs to robustly perform.</h2>
+						<h2 class="big">I engaged in interviews and brainstorming session with Kiwanis to define key needs that Rita CMS needs to robustly perform.</h2>
 					</div>
 				</div>
 			</div>
