--- a/about/index.html
+++ b/about/index.html
@@ -191,8 +191,8 @@
 					</div>
 					<div class="fl-50 j-c col-r marg t-l">
 						<h2>WordPress + Power Apps</h2>
-						<p>WordPress presents a powerful CMS. Users management content here, yet can simultaneously bind different Power Apps data with these objects.</p>
-						<p>Though JCMA, I deliver different products for several clients that take Dataverse data from Power Apps and serve it up via custom PHP endpoints on the front end. I create design systems and code the entire front-end experiences.</p>
+						<p>WordPress presents a powerful CMS and custom front-end flexibility with theme and plugin development. Users can manage uploaded content here, yet can simultaneously bind different data with these objects from Power Apps.</p>
+						<p>Through JCMA, I deliver different products for several clients that take Dataverse data from Power Apps and serve it up via custom PHP endpoints on the front end. I create design systems and code the entire front-end experiences.</p>
 					</div>
 				</div>
 				<div class="flex-box-rev al-c">
