--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<a href="#nurture-life" class="btn">eCommerce Web</a>
 				<a href="#united-cargo" class="btn">Mobile app</a>
 			</div>
-			<div class="padding">
+			<div class="marg">
 				<div class="flex-box al-fl-st scroll-box">
 					<div id="ritacms" class="card">
 						<a href="work/rita-cms/"><img src="media/rita-cms-thumb.png" width="100%"></a>
@@ -93,18 +93,6 @@
 						<a href="work/united-cargo/"><h3>United Cargo -- UX Design</h3></a>
 						<p>Cargo shipment mobile app for United Airlines</p>
 						<p style="color: grey;">#UXDesign #WordPress #CSS #HTML #JavaScript</p>
-					</div>
-					<div id="ritacms" class="card">
-						<a href="work/rita-cms/"><img src="media/rita-cms-thumb.png" width="100%"></a>
-						<a href="work/rita-cms/"><h3>Rita CMS -- WordPress Development</h3></a>
-						<p>WordPress web app for club management</p>
-						<p style="color: grey;">#UXDesign #WordPress #Dataverse #API #PHP #Twig #FetchXML</p>
-					</div>
-					<div id="milo" class="card">
-						<a href="work/milo/"><img src="media/milo-thumb.png" width="100%"></a>
-						<a href="work/milo/"><h3>Milo -- Power Apps Development</h3></a>
-						<p>Project management Power App for internal teams</p>
-						<p style="color: grey;">#UXDesign #PowerApps #UI #CRM #Dataverse</p>
 					</div>
 					<div class="card">
 						<a href=""><img src="media/jcma-card.png" width="100%"></a>
