--- a/index.html
+++ b/index.html
@@ -94,24 +94,24 @@
 						<p>Cargo shipment mobile app for United Airlines</p>
 						<p style="color: grey;">#UXDesign #WordPress #CSS #HTML #JavaScript</p>
 					</div>
-					<div class="card">
-						<a href=""><img src="media/jcma-card.png" width="100%"></a>
+					<div id="jcma" class="card">
+						<img src="media/jcma-card.png" width="100%">
 						<h3>JCMA -- Web Design</h3>
 						<p>Web and brand overhaul for a digital design and marketing company</p>
 						<p style="color: grey;">#UXDesign #WordPress #Typography #Brand #DesignSystem</p>
 					</div>
-					<div class="card">
-						<a href=""><img src="media/darna-thumb.png" width="100%"></a>
-						<h3>Darna -- WordPress Development</h3>
-						<p>Website design and development for an international liquer company</p>
-						<p style="color: grey;">#UXDesign #WordPress #CSS #HTML #JavaScript</p>
-					</div>
-					<div class="card">
-						<a href=""><img src="media/ford-card.png" width="100%"></a>
+					<div id="ford" class="card">
+						<img src="media/ford-card.png" width="100%">
 						<h3>FordPass -- UX Design</h3>
 						<p>Automotive companion app for Ford Motor Company</p>
 						<p style="color: grey;">#UserResearch #UXDesign #Prototyping #UI</p>
 					</div>
+					<!--<div id="darna" class="card">
+						<a href=""><img src="media/darna-thumb.png" width="100%"></a>
+						<h3>Darna -- WordPress Development</h3>
+						<p>Website design and development for an international liquer company</p>
+						<p style="color: grey;">#UXDesign #WordPress #CSS #HTML #JavaScript</p>
+					</div>-->
 				</div>
 			</div>
 		</div>
