--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -128,8 +128,8 @@
 					</div>
 					<div class="fl-50 j-fl-st col-l marg t-l">
 						<h5>Persona</h5>
-						<h2>Professionals, retirees, volunteers, and disable veterans.</h2>
-						<p>Most of the users of Rita CMS are older aged, like 55+ and some of the oldest in late 80s. With againg comes a different ocular and motor experience of technology. However, the age range is varied. There are also younger folks. Outside of Noon Kiwanis, the Disabled American Veterans Chapter 80 of Indiana also uses Rita CMS. These folsk as you can imagine have differences in user experience. These challenges present a unique design opportunity.</p>
+						<h2>Professionals, retirees, volunteers, and disabled veterans.</h2>
+						<p>Most of the users of Rita CMS are older aged, like 55+ and some of the oldest in late 80s. With aging comes a different ocular and motor experience of technology. However, the age range is varied. There are also younger folks. Outside of Noon Kiwanis, the Disabled American Veterans Chapter 80 of Indiana also uses Rita CMS. These folks as you can imagine have differences in user experience. These challenges present a unique design opportunity.</p>
 					</div>
 				</div>
 				<div class="flex-box al-c">
@@ -173,7 +173,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Accessible, intuive user interface</h3>
-						<p>The app's user interface needed to be accessible by multiple different kinds of user groups with different needs. To accomplish this goal, I endeadvored to create a design system that was sleek, easy, and comfortable to use. The system employs comfrtable colors of light blues, navys, and whites. I avoided anything that would be hard to see or affect colorblindness. In addition, I used lots of rounded edges, largers buttons, and larger, bold fonts.</p>
+						<p>The app's user interface needed to be accessible by multiple different kinds of user groups with different needs. To accomplish this goal, I endeavored to create a design system that was sleek, easy, and comfortable to use. The system employs comfrtable colors of light blues, navys, and whites. I avoided anything that would be hard to see or affect colorblindness. In addition, I used lots of rounded edges, largers buttons, and larger, bold fonts.</p>
 					</div>
 				</div>
 			</div>
@@ -195,7 +195,7 @@
 					</div>
 					<div class="fl-50 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Easy database access for admins</h3>
-						<p>Given the nature of Power Apps and its friendly, approachable, low-code environment, those adminisators who need to access data and move things who have non-technical backgrounds have a powerful and easy approach to access and manage the data they need.</p>
+						<p>Given the nature of Power Apps and its friendly, approachable, low-code environment, those administrators who need to access data and move things who have non-technical backgrounds have a powerful and easy approach to access and manage the data they need.</p>
 					</div>
 				</div>
 			</div>
@@ -228,7 +228,7 @@
 					</div>
 					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>FetchXML for data retrieval</h3>
-						<p>Most endpoints need to retrieve some kind of user-based data from Power Apps. A lot of my learning has been centered around to properly write and fromat FetchXML statements. Through, I've undesrstood how to pull in different Dataverse objects and find ways to filter them to pull the specific parameters or fields that I need.</p>
+						<p>Most endpoints need to retrieve some kind of user-based data from Power Apps. A lot of my learning has been centered around how to properly write and fromat FetchXML statements. Through queries, I've understood how to pull in different Dataverse objects and find ways to filter them to pull the specific parameters or fields that I need.</p>
 					</div>
 				</div>
 			</div>
@@ -239,7 +239,7 @@
 					</div>
 					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Query string parameters</h3>
-						<p>Another key functionality of the app is the ability pull in paremeters from different data objects and pass them to other endpoints via HTTP requests. Using different GET and POST methods allows to create user functionality allows us to create different interface pieces that users can interact and create their own content.</p>
+						<p>Another key functionality of the app is the ability pull in parameters from different data objects and pass them to other endpoints via HTTP requests. Using different GET and POST methods to pass user inputs allows us to create different interface pieces that users can interact and create their own content.</p>
 					</div>
 				</div>
 			</div>
@@ -403,7 +403,7 @@
 						</div>
 						<div class="blue-call">
 							<h4>Edits</h4>
-							<p>It's hard to say what I would do differently because this work has been ongoing and a continuous educational journey. I am proud of my efforts to refactor. I think something that would have helped from the start was having properly scoped agile fatures around user stories and specific pull requests to help prjoct scope creeping.</p>
+							<p>It's hard to say what I would do differently because this work has been ongoing and a continuous educational journey. I am proud of my efforts to refactor. I think something that would have helped from the start was having properly scoped agile features around user stories and specific pull requests to help project scope creeping.</p>
 						</div>
 						<div class="blue-call">
 							<h4>In Progress</h4>
