--- a/work/rita-cms/index.html
+++ b/work/rita-cms/index.html
@@ -224,7 +224,7 @@
 				</div>
 				<div class="flex-box al-c">
 					<div class="fl-60 marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/fetchxml.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>FetchXML for data retrieval</h3>
@@ -235,7 +235,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-60 marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/query-params.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Query string parameters</h3>
@@ -246,7 +246,7 @@
 			<div class="w-cont">
 				<div class="flex-box al-c">
 					<div class="fl-60 marg">
-						<img class="shad" src="../../media/shorter-place.png" alt="" width="100%">
+						<img class="shad" src="../../media/php-endpoints.png" alt="" width="100%">
 					</div>
 					<div class="fl-40 j-fl-st col-r marg t-l" style="padding-top: 0px;">
 						<h3>Customizable PHP endpoints</h3>
@@ -374,15 +374,15 @@
 				<div class="flex-box">
 					<div class="fl-33 marg">
 						<h4>Custom Full-Stack WordPress App</h4>
-						<p>"I spend more time completing work<br>and less time managing HOW to do that work."</p>
+						<p>We created a custom WP app that preserved and migrated data to Power Apps, now serving it up in flexible functions and interfaces.</p>
 					</div>
 					<div class="fl-33 marg">
 						<h4>400+</h4>
 						<p>active users across three different organizations</p>
 					</div>
 					<div class="fl-33 marg">
-						<h4>Visibility Increase</h4>
-						<p>"Where projects and tasks are at on the pike is much, much clearer now."</p>
+						<h4>Easy, Responive Interface</h4>
+						<p>"It's clean, comfortable, and just easy to use. I know what to do."</p>
 					</div>
 				</div>
 			</div>
