--- a/work/index.html
+++ b/work/index.html
@@ -63,7 +63,7 @@
 	<section id="work" class="flex-col j-c al-c dark-white-2">
 		<div class="container">
 			<div class="padding">
-				<div class="flex-box j-c al-c fl-wr">
+				<div class="flex-box fl-wr">
 					<div class="card">
 						<a href="rita-cms/"><img src="../media/rita-cms-thumb.png" width="100%"></a>
 						<a href="rita-cms/"><h3>Rita CMS -- WordPress Development</h3></a>
