--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+	<meta property="og:image" content="media/port-og.jpg" />
 	<link href="css/style.css" rel="stylesheet">
 	<title>Greg Sirko – UX Designer + Web Developer</title>
 	<link rel="icon" href="favicon.ico">
