--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
 				<div class="fl-60 marg">
 					<p style="color: #FFF;" class="big">Hi, I’m Greg — a UX designer and web developer with a focus on WordPress and front-end design.</p>
 					<p style="color: #FFF;" class="big">I combine a deep understanding of user behavior with technical development expertise to code thoughtful products built for performance. From eCommerce to marketing sites to productivity software, I deliver meaningful, intuitive digital solutions that delight users and drive competitive business results alike.</p>
-					<p style="color: #FFF;" class="big">Outside of work I enjoy painting abstract works, World of Warcraft, and producing textural, groovng techno.</p>.</p>
+					<p style="color: #FFF;" class="big">Outside of work I enjoy painting abstract works, World of Warcraft, and producing electronic music.</p>.</p>
 				
 				</div>
 				<div class="fl-50 marg">
